# vibe-trader-agent

./: .env.example  .gitignore  README.md  langgraph.json  pyproject.toml  taskfile.sh
src/vibe_trader_agent/: __init__.py  configuration.py  extraction_tools.py  finance_tools.py  gcs_client.py  graph.py  misc.py  nodes.py  prompts.py  routers.py  state.py  tools.py  utils.py
src/vibe_trader_agent/optimization/: __init__.py  params_validation.py  pdf_dashboard.py  portfolio_optimizer.py  results_formatting.py  state_parser.py
tests/agents/: test_portfolio_analyst.py  test_profile_builder_with_human_feedback.py  test_profiler_with_human_feedback.py  test_ui_profile_builder.py  test_ui_profiler.py  test_views_agent.py
tests/integration_tests/: test_graph.py
tests/unit_tests/: test_configuration.py  test_extraction.py
