[project]
name = "vibe-trader-agent"
version = "0.0.1"
description = "Starter template for making a custom Reasoning and Action agent (using tool calling) in LangGraph."
authors = [
    { name = "William Fu-Hinthorn", email = "13333726+hinthornw@users.noreply.github.com" },
]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11,<4.0"
dependencies = [
    "langgraph>=0.4.1",
    "langchain-openai>=0.1.22",
    "langchain-anthropic>=0.1.23",
    "langchain>=0.2.14",
    "langchain-fireworks>=0.1.7",
    "python-dotenv>=1.0.1",
    "langchain-tavily>=0.1",
    "numpy>=2.2.5",
    "pandas>=2.2.3",
    "yfinance>=0.2.59",
    "scipy>=1.15.3",
    "matplotlib>=3.10.3",
    "pyportfolioopt>=1.5.6",
    "reportlab>=4.4.1",
    "seaborn>=0.13.2",
    "google-cloud-storage>=3.1.0",
    "notebook>=7.4.2",
    "reportlab>=4.4.1",
]


[project.optional-dependencies]
dev = ["mypy>=1.11.1", "ruff>=0.6.1"]

[build-system]
requires = ["setuptools>=73.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["langgraph.templates.vibe_trader_agent", "vibe_trader_agent"]
[tool.setuptools.package-dir]
"langgraph.templates.vibe_trader_agent" = "src/vibe_trader_agent"
"vibe_trader_agent" = "src/vibe_trader_agent"


[tool.setuptools.package-data]
"*" = ["py.typed"]

[tool.ruff]
lint.select = [
    "E",    # pycodestyle
    "F",    # pyflakes
    "I",    # isort
    "D",    # pydocstyle
    "D401", # First line should be in imperative mood
    "T201",
    "UP",
]
lint.ignore = [
    "UP006",
    "UP007",
    # We actually do want to import from typing_extensions
    "UP035",
    # Relax the convention by _not_ requiring documentation for every function parameter.
    "D417",
    "E501",
]
[tool.ruff.lint.per-file-ignores]
"tests/*" = ["D", "UP"]
[tool.ruff.lint.pydocstyle]
convention = "google"

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "langgraph-cli[inmem]>=0.1.71",
    "mypy>=1.15.0",
    "pytest>=8.3.5",
    "ruff==0.11.9",
    "streamlit>=1.45.1",
]
